[fix] alcoholfeature null 검사 제거. [refactor] sonarlint 검사 결과 반영.